--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,18 @@
 </head>
 <body>
   <app-root></app-root>
+  <footer>
+    <ul>
+      <li>
+        Dogs by <a href="https://dog.ceo/dog-api/">https://dog.ceo/dog-api/</a>
+      </li>
+      <li>
+        Jokes by <a href="https://api.chucknorris.io/">https://api.chucknorris.io/</a>
+      </li>
+      <li>
+        Code at <a href="https://github.com/matyas-mihalyi/dogs-telling-chuck-norris-jokes">https://github.com/matyas-mihalyi/</a>
+      </li>
+    </ul>
+  </footer>
 </body>
 </html>
